--- a/jimmy-master/style.css
+++ b/jimmy-master/style.css
@@ -37,7 +37,7 @@ html, body{
 }
 
 body.demos .section {
-    background: url(images/bg.png) repeat top center #f2f3f5;
+    background:  repeat top center #f2f3f5;
 }
 
 body.demos .section-title img {
@@ -498,19 +498,23 @@ xclip
 }
 
 .section.wb {
-    background-color: #ffffff;
+    background-color:
+    #C599B6;
 }
 
 .section.lb {
-    background-color: #f2f3f5;
+    background-color: 
+    #FAD0C4;
 }
 
 .section.db {
-    background-color: #111111;
+    background-color: 
+    #E6B2BA;
 }
 
 .section.color1 {
-    background-color: #448AFF;
+    background-color: 
+    #C599B6;
 }
 
 .first-section {
@@ -554,7 +558,7 @@ xclip
 }
 
 .section-title p {
-    color: #999;
+    color: dimgray;
     font-weight: 400;
     font-size: 18px;
     line-height: 33px;
@@ -573,7 +577,7 @@ xclip
 .section.colorsection p,
 .section.colorsection h3,
 .section.db h3 {
-    color: #ffffff;
+    color: black;
 }
 
 
@@ -1227,13 +1231,17 @@ xclip
 
 .message-box p {
     margin-bottom: 20px;
+    color: whitesmoke;
+}
+.message-box b {
+    color: #181616;
 }
 
 .message-box .lead {
     padding-top: 10px;
 	font-size: 16px;
 	font-style: italic;
-	color: #999;
+	color:black;
 	padding-bottom: 10px;
 	padding-left: 15px;
 }
@@ -1280,7 +1288,7 @@ xclip
 }
 
 .section.wb .hover-up p{
-	color: #cccccc;
+	color: black;
 }
 
 .playbutton {
@@ -2103,7 +2111,7 @@ select.mobile-device {
 }
 
 #contact {
-    background: url(images/bg.png) no-repeat center center #333333;
+    background: no-repeat center center #C599B6;
 }
 
 
@@ -2536,59 +2544,9 @@ select.mobile-device {
     color: rgba(255, 255, 255, 0.6);
 }
 
-
-.resume .resume-title {
-    color: var(--heading-color);
-    font-size: 26px;
-    font-weight: 700;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-  
-  .resume .resume-item {
-    padding: 0 0 20px 20px;
-    margin-top: -2px;
-    border-left: 2px solid var(--accent-color);
-    position: relative;
-  }
-  
-  .resume .resume-item h4 {
-    line-height: 18px;
-    font-size: 18px;
-    font-weight: 600;
-    text-transform: uppercase;
-    color: color-mix(in srgb, var(--default-color), transparent 20%);
-    margin-bottom: 10px;
-  }
-  
-  .resume .resume-item h5 {
-    font-size: 16px;
-    padding: 5px 15px;
-    display: inline-block;
-    font-weight: 600;
-    margin-bottom: 10px;
-  }
-  
-  .resume .resume-item ul {
-    padding-left: 20px;
-  }
-  
-  .resume .resume-item ul li {
-    padding-bottom: 10px;
-  }
-  
-  .resume .resume-item:last-child {
-    padding-bottom: 0;
-  }
-  
-  .resume .resume-item::before {
-    content: "";
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    border-radius: 50px;
-    left: -9px;
-    top: 0;
-    background: var(--background-color);
-    border: 2px solid var(--accent-color);
-  }
+.info-item h3 {
+    color: dimgray;
+}
+.info-item p {
+    color: white;
+}
